@@ -41,8 +41,14 @@
         <main.basedir>${project.basedir}</main.basedir>
         <junit.version>4.12</junit.version>
         <mockito.version>2.2.11</mockito.version>
-        <jackson.json.version>2.8.5</jackson.json.version>
-        <!-- <jackson.json.version>2.4.6</jackson.json.version> -->
+        <!--<jackson.json.version>2.8.5</jackson.json.version>-->
+         <jackson.json.version>2.4.6</jackson.json.version>
+        <surefire.plugin.version>2.19.1</surefire.plugin.version>
+        <skip.unit.tests>false</skip.unit.tests>
+        <integration.test.pattern>**/*IT.java</integration.test.pattern>
+        <skip.integration.tests>true</skip.integration.tests>
+        <surefire.redirectTestOutputToFile>true</surefire.redirectTestOutputToFile>
+        <unit.test.pattern>**/*Test.java</unit.test.pattern>
     </properties>
 
     <repositories>
@@ -60,12 +66,6 @@
         <dependency>
             <groupId>co.cask.cdap</groupId>
             <artifactId>cdap-api</artifactId>
-            <version>${cdap.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>co.cask.cdap</groupId>
-            <artifactId>cdap-api-common</artifactId>
             <version>${cdap.version}</version>
             <scope>provided</scope>
         </dependency>
@@ -125,30 +125,22 @@
             <version>${spark.version}</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>co.cask.cdap</groupId>
-            <artifactId>cdap-data-pipeline</artifactId>
-            <version>${cdap.version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>co.cask.cdap</groupId>
-            <artifactId>cdap-data-streams</artifactId>
-            <version>${cdap.version}</version>
-            <scope>provided</scope>
-        </dependency>
+
         <dependency>
             <groupId>co.cask.cdap</groupId>
             <artifactId>hydrator-test</artifactId>
             <version>${cdap.version}</version>
             <scope>provided</scope>
         </dependency>
+
         <dependency>
             <groupId>co.cask.cdap</groupId>
-            <artifactId>cdap-unit-test</artifactId>
+            <artifactId>cdap-data-streams</artifactId>
             <version>${cdap.version}</version>
-            <scope>test</scope>
+            <scope>provided</scope>
         </dependency>
+
+        <!-- JUnit Libraries -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -168,6 +160,7 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Jackson Libraries -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -183,6 +176,7 @@
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.json.version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
@@ -196,7 +190,49 @@
                     <target>1.7</target>
                 </configuration>
             </plugin>
+
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${surefire.plugin.version}</version>
+                <configuration>
+                    <skipTests>${skip.unit.tests}</skipTests>
+                    <argLine>-Xmx2048m -Djava.awt.headless=true -XX:+UseConcMarkSweepGC
+                        -XX:OnOutOfMemoryError="kill -9 %p" -XX:+HeapDumpOnOutOfMemoryError
+                    </argLine>
+                    <redirectTestOutputToFile>${surefire.redirectTestOutputToFile}</redirectTestOutputToFile>
+                    <parallel>methods</parallel>
+                    <threadCount>8</threadCount>
+                    <forkCount>8</forkCount>
+                    <reuseForks>true</reuseForks>
+                    <reportFormat>xml</reportFormat>
+                    <trimStackTrace>false</trimStackTrace>
+                    <systemPropertyVariables>
+                        <java.io.tmpdir>${project.build.directory}</java.io.tmpdir>
+                        <logback.configurationFile>
+                            ${basedir}/src/test/resources/logback-test.xml
+                        </logback.configurationFile>
+                    </systemPropertyVariables>
+                    <includes>
+                        <include>${unit.test.pattern}</include>
+                    </includes>
+                    <excludes>
+                        <exclude>${integration.test.pattern}</exclude>
+                    </excludes>
+                    <!-- Sets the VM argument line used when unit tests are run. -->
+                    <argLine>${surefireArgLine}</argLine>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.maven.surefire</groupId>
+                        <artifactId>surefire-junit47</artifactId>
+                        <version>${surefire.plugin.version}</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
+
+
+           <!-- <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.14.1</version>
@@ -220,7 +256,8 @@
                         <exclude>**/*TestRun.java</exclude>
                     </excludes>
                 </configuration>
-            </plugin>
+            </plugin>-->
+
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
